fix issue with scrollbar

--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ img {
 }
 
 .wrapper{
-    margin: 1rem auto;
     max-width: 1144px;
-    padding-inline: 1em
+    padding: 1em;
+    margin-inline: auto;
 }
 
 main {
